--- a/index.html
+++ b/index.html
@@ -362,96 +362,66 @@
                     </div>
                 </div>
             </section>
-                <section class="default dark bgTeam">
-                    <div class="sectionTeam">
-                        <div class="sectionTitle">Our Team</div>
-                        <div class="sectionDesc">our co workes</div>
-                        <div class="sectionBory team">
-                            <div class="sectionTeamArea">
-                                <div class="sliders">
-                                    <div class="slide">
-                                        <div class="slidePhoto">
-                                            <img src="./media/mulher1.png" alt="">
-                                        </div>
-                                        <h4>JANE DOE</h4>
-                                        <p>Master mind</p>
-                                        <div class="widgts">
-                                            <div class="colorWidgts"> 
-                                                <a href=""><img src="./assets/images/facebook.png" alt=""></a> 
-                                            </div>
-                                            <div class="colorWidgts"> 
-                                               <a href=""> <img src="./assets/images/googleplus.png" alt=""></a>
-                                            </div>
-                                            <div class="colorWidgts"> 
-                                               <a href=""><img src="./assets/images/linkedin.png" alt=""></a> 
-                                            </div>
-                                            <div class="colorWidgts"> 
-                                               <a href=""> <img src="./assets/images/twitter.png" alt=""></a>
-                                            </div>
-                                            <div class="colorWidgts"> 
-                                               <a href=""> <img src="./assets/images/localizacao.png" alt=""></a>
-                                            </div>
-                                        </div>
-                                    </div>
+            <section class="section-map">
+                <div class="section-map--area">
+                    <div class="section-map--info">
+                            <div class="section-map--info-item">
+                                <div class="section-map--info-item-img">
+                                    <img src="assets/images/carta.png" />
                                 </div>
-                                <div class="sliders">
-                                    <div class="slide">
-                                        <div class="slidePhoto">
-                                            <img src="./media/homem1.png" alt="">
-                                        </div>
-                                        <h4>MIKE SHILLER</h4>
-                                        <p>Creative head</p>
-                                        <div class="widgts">
-                                            <div class="colorWidgts"> 
-                                                <a href=""><img src="./assets/images/facebook.png" alt=""></a> 
-                                            </div>
-                                            <div class="colorWidgts"> 
-                                               <a href=""> <img src="./assets/images/googleplus.png" alt=""></a>
-                                            </div>
-                                            <div class="colorWidgts"> 
-                                               <a href=""><img src="./assets/images/linkedin.png" alt=""></a> 
-                                            </div>
-                                            <div class="colorWidgts"> 
-                                               <a href=""> <img src="./assets/images/twitter.png" alt=""></a>
-                                            </div>
-                                            <div class="colorWidgts"> 
-                                               <a href=""> <img src="./assets/images/localizacao.png" alt=""></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="sliders">
-                                    <div class="slide">
-                                        <div class="slidePhoto">
-                                            <img src="./media/mulher2.png" alt="">
-                                        </div>
-                                        <h4>ANNA JONHS</h4>
-                                        <p>Technical lead</p>
-                                        <div class="widgts">
-                                            <div class="colorWidgts"> 
-                                                <a href=""><img src="./assets/images/facebook.png" alt=""></a> 
-                                            </div>
-                                            <div class="colorWidgts"> 
-                                               <a href=""> <img src="./assets/images/googleplus.png" alt=""></a>
-                                            </div>
-                                            <div class="colorWidgts"> 
-                                               <a href=""><img src="./assets/images/linkedin.png" alt=""></a> 
-                                            </div>
-                                            <div class="colorWidgts"> 
-                                               <a href=""> <img src="./assets/images/twitter.png" alt=""></a>
-                                            </div>
-                                            <div class="colorWidgts"> 
-                                               <a href=""> <img src="./assets/images/localizacao.png" alt=""></a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                                Endereço completão que irá ter algum tamanho
                             </div>
-                        </div>
-                </section>
+                            <div class="section-map--info-item">
+                                <div class="section-map--info-item-img">
+                                    <img src="assets/images/localizacao.png" />
+                                </div>
+                                Endereço completão que irá ter algum tamanho
+                            </div>
+                            <div class="section-map--info-item">
+                                <div class="section-map--info-item-img">
+                                    <img src="assets/images/telefone.png" />
+                                </div>
+                                Endereço completão que irá ter algum tamanho
+                            </div>
+                            <div class="section-map--info-item">
+                                <div class="section-map--info-item-img">
+                                    <img src="assets/images/arroba.png" />
+                                </div>
+                                Endereço completão que irá ter algum tamanho
+                            </div>
+                            <div class="section-map--info-item">
+                                <div class="section-map--info-item-img">
+                                    <img src="assets/images/web.png" />
+                                </div>
+                                Endereço completão que irá ter algum tamanho
+                            </div>
+                    </div>
+                </div>
+            </section>
+    
+    
     </main>
     <footer>
-
+        <div class="footer--area">
+            <div class="footer--item area1">
+                <div class="footer-social">
+                    <a href=""><img src="assets/images/twitter.png" /></a>
+                    <a href=""><img src="assets/images/linkedin.png" /></a>
+                    <a href=""><img src="assets/images/facebook.png" /></a>
+                    <a href=""><img src="assets/images/googleplus.png" /></a>
+                    <a href=""><img src="assets/images/pinterest.png" /></a>
+                </div>
+            </div>
+            <div class="footer--item area2">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel eros vitae erat condimentum viverra a nec lacus. Maecenas eros lectus, rhoncus vel dictum vel, dignissim eget ligula. Vestibulum id tempus quam, sed pellentesque quam. Vestibulum porta aliquet risus, ac rhoncus sem aliquet ac. Donec tincidunt cursus elit vitae euismod.
+            </div>
+            <div class="footer--item area3">
+                <form method="POST">
+                    <input type="email" name="email" placeholder="EMAIL TO SUBSCRIBE" />
+                    <button class="button">Subscribe</button>
+                </form>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
