--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
+    <a name="Home"></a>
     <header>
         <div class="header">
             <div class="logo">
@@ -18,14 +19,15 @@
             <div class="menu">
                 <nav>
                     <ul>
-                        <li class="active"> <a href=""> HOME</a></li>
-                        <li> <a href=""> ABOUT US</a></li>
-                        <li> <a href="">SERVICES</a></li>
-                        <li> <a href="">OUR TEAM</a></li>
-                        <li> <a href="">PRICE</a></li>
-                        <li> <a href="">SOME FACTS</a></li>
-                        <li> <a href="">Contacts us</a></li>
-                        <li> <a href="">Happy clients</a></li>                        
+                        <li> <a href="#Home"> HOME</a></li>
+                        <li> <a href="#About"> ABOUT US</a></li>
+                        <li> <a href="#Services">SERVICES</a></li>
+                        <li> <a href="#OurProjects">OUR PROJECTS</a></li>
+                        <li> <a href="#OurTeam">OUR TEAM</a></li>
+                        <li> <a href="#Price">PRICE</a></li>
+                        <li> <a href="#Facts">SOME FACTS</a></li>
+                        <li> <a href="#Contacts">Contacts us</a></li>
+                        <li> <a href="#Clients">Happy clients</a></li>                        
                     </ul>
                 </nav>
             </div>
@@ -50,7 +52,7 @@
       
             </div>
         </section>
-
+        <a name="About"></a>
         <section class="default ligth">
             <div class="sectionTitle">About us</div>
             <div class="sectionDesc">who we are ?</div>
@@ -73,6 +75,7 @@
                 </div>
             </div>
         </section>
+        <a name="Services"></a>
         <section class="default dark">
             <div class="sectionTitle">Service</div>
             <div class="sectionDesc">Services that we provide</div>
@@ -101,6 +104,7 @@
                 </div>
             </div>
         </section>
+        <a name="OurProjects"></a>
         <section class="default ligth">
             <div class="sectionTitle">Our projects</div>
             <div class="sectionDesc">what we create</div>
@@ -229,6 +233,7 @@
                     <a href="" class="button"  >More Projects</a>
                 </div>
             </section>
+            <a name="OurTeam"></a>
             <section class="default dark bgTeam">
                 <div class="sectionTeam">
                     <div class="sectionTitle">Our Team</div>
@@ -316,6 +321,7 @@
                         </div>
                     </div>
             </section>
+            <a name="Clients"></a>
             <section class="default ligth">
             <div class="sectionTitle">HAPPY CLIENTS</div>
             <div class="sectionDesc">CLIENT REVIEWS</div>
