--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             </div>
             
             <div class="menu">
+                <img class="menuOpen" src="./assets/images/menu.png" alt="">
                 <nav>
                     <ul>
                         <li> <a href="#Home"> HOME</a></li>
@@ -230,8 +231,8 @@
                             <img src="./media/foto6.jpg" alt="">
                         </div>
                     </div>
-                    <a href="" class="button"  >More Projects</a>
                 </div>
+                <a href="" class="button"  >More Projects</a>
             </section>
             <a name="OurTeam"></a>
             <section class="default dark bgTeam">
